simplifying the layout eliminating duplication by collapsing css content refactoring removing the parallax wiring quickstarts major css cleanup

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<title>{{ page.title }}</title>
+<title>Clarify - {{ page.title }}</title>
 <link rel="stylesheet" type="text/css" href="/assets/css/style.css"/>
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald&subset=latin,cyrillic-ext,greek-ext,greek,latin-ext,cyrillic"/>
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Candal:400|weights:[400:00|Candal:400|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Open Sans:300,300italic,400,italic,600,600italic,700,700italic,800,800italic|Candal:400|Candal:400|Candal:400|Candal:400|Averia Sans Libre:300,300italic,400,italic,700,700italic|Candal:400|Droid Serif:400,italic,700,700italic|Candal:400|Candal:400|Arial:400,700|Oswald:300,400,700|Dosis:200,300,400,500,600,700,800|Coustard:400,900|Enriqueta:400,700&subset=latin,cyrillic-ext,greek-ext,greek,latin-ext,cyrillic"/>
