--- a/assets/css/easy-responsive-tabs.css
+++ b/assets/css/easy-responsive-tabs.css
@@ -1,7 +1,14 @@
 /* change to force update */
-ul.resp-tabs-list, p {
+ul.resp-tabs-list {
     margin: 0px;
-    padding: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+p {
+    margin: 0;
+    padding-bottom: 3px;
+    padding-top: 3px;
 }
 
 .resp-tabs-list li {
