twitter account update

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
                 <a href="https://angel.co/clarify-inc">Angelist</a><br>
                 <a href="https://www.linkedin.com/company/clarify-inc">Linked In</a><br>
                 <a target="_blank" href="https://github.com/Clarify">Github</a><br>
-                <a href="https://twitter.com/clarify_inc">Twitter</a><br>
+                <a href="https://twitter.com/ClarifyIO">Twitter</a><br>
                 <a href="https://www.facebook.com/clarifyinc">Facebook</a><br>
             </div>
             <div class="terms-of-service center">
