minor style tweaks plus a new header link

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,7 @@
     <ul class="menu left horizontal mainMenu54">
         <li class="menu-item"><a href="http://clarify.io/how-clarify-works/">How it Works</a></li>
         <li class="menu-item"><a href="http://clarify.io/pricing/">Pricing</a></li>
+        <li class="menu-item"><a href="http://clarify.io/solution-providers/">Solution Providers</a></li>
         <li class="menu-item"><a href="/">Documentation</a></li>
         <li class="menu-item"><a href="https://developer.clarify.io/">Dev Portal</a></li>
         <li class="menu-item"><a href="http://clarify.io/blog/">Blog</a></li>
