--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,10 @@
                 <a href="https://www.facebook.com/clarifyinc">Facebook</a><br>
             </div>
             <div class="terms-of-service center">
-                <span>&copy; 2015 Clarify, Inc. &nbsp;| &nbsp;<a href="\terms-of-service">Terms of Service&nbsp;</a></span>
+                <span>
+                    &copy; 2015 Clarify, Inc. &nbsp;| &nbsp;<a href="\terms-of-service">Terms of Service&nbsp;</a>
+                    <a href="http://status.clarify.io/"><img src="/assets/img/icons/gauge-negative-colored.png" style="vertical-align: middle" />API Status</a>
+                </span>
             </div>
         </div>
     </div>
