simplified the multi-language example
the core system now support language detection automatically, so we
don’t have to specify it when we create the bundle/tracks

--- a/_includes/sections/multi-language-loading.html
+++ b/_includes/sections/multi-language-loading.html
@@ -1,5 +1,6 @@
 <h3>Loading Audio by Language</h3>
-<p>Our system needs to know what language your media is in so we can analyze everything properly. You can do this with a single command:</p>
+
+<p>Our system automatically detects the language of your media file so this process is no different than adding a English language media. You can do this with a single command:</p>
 
 <div id="language-tabs">
     <ul class="resp-tabs-list language-tabs">
