deploying the last of the docs

--- a/_includes/sections/multi-language-loading.html
+++ b/_includes/sections/multi-language-loading.html
@@ -14,6 +14,10 @@
 <p>Naming the bundle and providing a notify_url are both optional. We have a number of audio and video files available for processing on <a href="http://clarify.io/media">our Media Page</a>.</p>
 <p><em><strong>Hint:</strong> You don&#8217;t have to download these files. Instead you can pass us these urls via the create method shown above.</em></p>
 
+<p>After creating a bundle, you'll receive a response which looks something like this:</p>
+
+{% include /source/json/bundle_response.html %}
+
 <script>
     $(document).ready(function() {
         $('#language-tabs').easyResponsiveTabs({
