--- a/_includes/source/json/insights_r4.html
+++ b/_includes/source/json/insights_r4.html
@@ -16,6 +16,9 @@
         "insight:spoken_keywords": {
             "href": "/v1/bundles/abcde12345/insights/54321edcba"
         },
+        "insight:classification": {
+            "href": "/v1/bundles/abcde12345/insights/edcba56789"
+        },
         "insight:spoken_words": {
             "href": "/v1/bundles/abcde12345/insights/12345abcde"
         },
