--- a/_includes/source/python/media-loading.html
+++ b/_includes/source/python/media-loading.html
@@ -3,9 +3,9 @@
 <code class="python">
 from clarify_python import clarify
 
-clarify.set_key('my api key')
+client = clarify.Client('my api key')
 
-clarify.create_bundle(name='Dorothy and the Wizard of Oz',
+client.create_bundle(name='Dorothy and the Wizard of Oz',
         media_url='http://media.clarify.io/audio/books/dorothyandthewizardinoz_01_baum_64kb.mp3')
 </code>
     </pre>
