removing the sticky header for internal links

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,12 @@
+<div class="dataTypeShape mainShape60">
+    <a href="http://Clarify.io/">
+        <div class="mainImage55">
+            <img src="/assets/img/clarify-logo.png">
+        </div>
+    </a>
+</div>
 <div class="menu left horizontal mainMenu54">
-    <ul class="menu left horizontal mainMenu54">
+    <ul class="menu left horizontal">
         <li class="menu-item"><a href="http://clarify.io/how-clarify-works/">How it Works</a></li>
         <li class="menu-item"><a href="http://clarify.io/pricing/">Pricing</a></li>
         <li class="menu-item"><a href="http://clarify.io/solution-providers/">Solution Providers</a></li>
@@ -9,9 +16,3 @@
         <li class="menu-item"><a href="https://developer.clarify.io/accounts/signup/">Sign Up</a></li>
     </ul>
 </div>
-<div class="dataTypeShape mainShape60"></div>
-<a href="http://Clarify.io/">
-    <div class="mainImage55">
-        <img src="/assets/img/clarify-logo.png">
-    </div>
-</a>
