added internal links for easier help docs

--- a/_includes/sections/insight-links.html
+++ b/_includes/sections/insight-links.html
@@ -1,3 +1,5 @@
+<a name="insight-links"></a>
+
 <div id="insight-links-tabs">
     <ul class="resp-tabs-list insight-links-tabs">
         <li>curl</li>
