--- a/_includes/sections/insight-request.html
+++ b/_includes/sections/insight-request.html
@@ -1,3 +1,5 @@
+<a name="insight-request"></a>
+
 <div id="get-insight-tabs">
     <ul class="resp-tabs-list get-insight-tabs">
         <li>curl</li>
