--- a/_includes/sections/media-playing.html
+++ b/_includes/sections/media-playing.html
@@ -1,3 +1,5 @@
+<a name="playing"></a>
+
 <h3>Putting it All Together</h3>
 <p>From here, we can visualize our search results with our included <a href="https://github.com/Clarify/clarify-audio-player" onclick="_gaq.push(['_trackEvent', 'outbound-article', 'https://github.com/Clarify/clarify-audio-player', 'audio player']);" >audio player</a>. The player should work with minimal additional configuration, but the bulk of the logic is already above in the results.</p>
 
