--- a/_includes/sections/multi-language-loading.html
+++ b/_includes/sections/multi-language-loading.html
@@ -1,3 +1,5 @@
+<a name="multi-language-loading"></a>
+
 <h3>Loading Audio by Language</h3>
 
 <p>Our system automatically detects the language of your media file so this process is no different than adding a English language media. You can do this with a single command:</p>
