--- a/_includes/sections/media-loading.html
+++ b/_includes/sections/media-loading.html
@@ -1,3 +1,5 @@
+<a name="loading"></a>
+
 <h3>Loading Audio</h3>
 <p>First include the SDK and create your object using your API Key. Once you&#8217;ve created the object, you can use the object to load each of your audio files as shown:</p>
 
