--- a/_includes/sections/media-searching.html
+++ b/_includes/sections/media-searching.html
@@ -1,3 +1,5 @@
+<a name="searching"></a>
+
 <h3>Searching Audio</h3>
 <p><em><strong>Note:</strong> While we process files as we receive them, there will be a delay before your file is available for searching. This is normally 1 minute for every minute of audio/video.</em></p>
 <p>To search, you use the same object you created before and just search using your keywords. If you uploaded the “Wizard of Oz” audio clip, you can search for “dorothy”. Then you can process and interact the results however you wish.</p>
