--- a/_includes/sections/multi-language-searching.html
+++ b/_includes/sections/multi-language-searching.html
@@ -1,4 +1,7 @@
+<a name="multi-language-searching"></a>
+
 <h3>Searching Media by Language</h3>
+
 <p>To search, you use the same object you created before and can search using your keywords. The only change is that you have to specify the language of the term you&#8217;re seeking. This is done with a single command:</p>
 
 <div id="language-search-tabs">
