fleshed out the Topics API calls: - added the quickstart - added the data formats - showed simple jq formulas in action

--- a/_includes/source/json/insights_r4.html
+++ b/_includes/source/json/insights_r4.html
@@ -22,6 +22,9 @@
         "insight:spoken_words": {
             "href": "/v1/bundles/abcde12345/insights/12345abcde"
         },
+        "insight:spoken_topics": {
+            "href": "/v1/bundles/abcde12345/insights/34567abcde"
+        },
         "insight:transcript_r4": {
             "href": "/v1/bundles/abcde12345/insights/98765abcde"
         },
