--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,13 +5,14 @@
             <ul id="menu-documentation-sidebar" class="menu">
                 <li class="menu-item"><a href="/api/">API Endpoints</a></li>
                 <li class="menu-item"><a href="/faq/">Frequently Asked Questions</a></li>
-                <li class="menu-item"><a href="/libraries/">Libraries</a></li>
+                <li class="menu-item"><a href="/libraries/">Libraries/SDKs</a></li>
                 <li class="menu-item"><a href="/quickstarts/">Quickstarts</a>
                     <ul class="sub-menu">
                         <li class="menu-item"><a href="/quickstarts/media-search.html">Media Search</a></li>
                         <li class="menu-item"><a href="/quickstarts/multi-language-support.html">Multi-Language Support</a></li>
-                        <li class="menu-item"><a href="/quickstarts/human-transcripts.html">Human Transcripts</a></li>
                         <li class="menu-item"><a href="/quickstarts/keyword-insight.html">Keywords Insight</a></li>
+                        <li class="menu-item"><a href="/quickstarts/topics-insight.html">Topics Insight</a></li>
+                        <li class="menu-item"><a href="/quickstarts/human-transcripts.html">Human Transcripts</a></li>
                     </ul>
                 </li>
             </ul>
