Fix the header/footer margin around the code samples

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2077,3 +2077,12 @@ code span {
     font-family: inherit;
     font-weight: bold;
 }
+
+pre {
+    margin-bottom: -2em;
+    padding-bottom: 0em;
+}
+
+code.hljs {
+    padding-bottom: 1em;
+}
