simplifying the includes to be markdown instead of html - converted the library installs; - converted the media loading; - converted the media searching;

--- a/_includes/sections/media-loading.html
+++ b/_includes/sections/media-loading.html
@@ -11,7 +11,7 @@
     </ul>
     <div class="resp-tabs-container media-loading-tabs">
         {% for language in page.languages %}
-        {% include /source/{{language | slugify}}/media-loading.html %}
+        <div>{% include /source/{{language | slugify}}/media-loading.md %}</div>
         {% endfor %}
     </div>
 </div>
