--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2078,11 +2078,6 @@ code span {
     font-weight: bold;
 }
 
-pre {
-    margin-bottom: -2em;
-    padding-bottom: 0em;
-}
-
 code.hljs {
-    padding-bottom: 1em;
+    padding: 12px;
 }
