--- a/_includes/sections/media-playing.html
+++ b/_includes/sections/media-playing.html
@@ -9,45 +9,8 @@
         <li>Python</li>
     </ul>
     <div class="resp-tabs-container player-tabs">
-        <div>
-            <pre>
-<code class="php">
-&lt;?php
-
-require '../vendor/autoload.php';
-
-$bundle = new Clarify\Bundle($apikey);
-$items = $bundle->search($terms);
-
-$search_terms = json_encode($items['search_terms']);
-$item_results = json_encode($items['item_results']);
-
-$audiokey = $items['_links']['items'][0]['href'];
-$tracks = $bundle->tracks($audiokey)['tracks'];
-$mediaUrl = $tracks[0]['media_url'];
-</code>
-            </pre>
-        </div>
-        <div>
-            <pre>
-<code class="python">
-from clarify_python import clarify
-import json
-
-clarify.set_key('my api key')
-
-result = clarify.search(query='dorothy')
-search_terms = json.dumps(result['search_terms'])
-item_results = json.dumps(result['item_results'])
-
-bundleref = result['_links']['items'][0]['href']
-bundle = clarify.get_bundle(bundleref)
-tracksref = bundle['_links']['o3v:tracks']['href']
-tracks = clarify.get_track_list(tracksref)['tracks']
-mediaURL = tracks[0]['media_url']
-</code>
-            </pre>
-        </div>
+        <div>{% include /source/php/media-playing.md %}</div>
+        <div>{% include /source/python/media-playing.md %}</div>
     </div>
 </div>
 
