tweaking 'by invite' language

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2064,7 +2064,7 @@ code span {
 }
 
 .beta, .invite {
-    background-color: lightgray;
+    background-color: antiquewhite;
     font-family: monospace;
     font-size: medium;
     font-style: italic;
